Rebuild all 42 PDFs with the bundled fonts
Every artifact is regenerated, so this touches all 42 binaries. Three
things changed at once and they cannot be separated:

- the vendored fonts replace host-resolved ones, which shifts pagination
  slightly in every volume;
- JAVA-04, JAVA-05, and JAVA-06 absorb the four new chapters
  (108 -> 120, 128 -> 148, 98 -> 108 pages);
- the master book carries all four (616 -> 656 pages).

dist/manifest.json is regenerated with the new page counts, byte sizes, and
SHA-256 digests. validate_pdfs.py passes across all 42 files for structure,
per-page content, and manifest agreement, and every volume remains inside
its declared min_pages/max_pages band.

This is also the last rebuild that should ever land as a commit. With CI
now able to build and validate the series unattended, dist/ can stop being
tracked -- see CLAUDE.md section 6, step 1.